objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Aboriginal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aboriginal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_of_Student__c</fullName>
        <formula>IF(! ISBLANK(  Birthdate  ) , FLOOR( (TODAY() -  Birthdate  )/365.2425) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Student</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alumni__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is parent part of Alumni?</inlineHelpText>
        <label>Alumni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Australian_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Australian Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Church_Affiliation__c</fullName>
        <label>Church Affiliation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denbigh_Student_ID__c</fullName>
        <externalId>true</externalId>
        <label>Denbigh Student ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                    <default>true</default>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Alumni__c</fullName>
        <inlineHelpText>If an ex-student of St Andrew’s, final Year and Year group</inlineHelpText>
        <label>If Alumni</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupation_Position__c</fullName>
        <label>Occupation/Position</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overseas_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overseas Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Type__c</fullName>
        <label>Parent Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Name_in_Conversation__c</fullName>
        <label>Known As</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_with_Student__c</fullName>
        <label>Relationship with Student</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anglican</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resident_of_Australia__c</fullName>
        <label>Resident of Australia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Temporary</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <displayFormat>SID-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Student ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Student_Status__c</fullName>
        <label>Student Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Future Student</fullName>
                    <default>true</default>
                    <label>Future Student</label>
                </value>
                <value>
                    <fullName>Current Student</fullName>
                </value>
                <value>
                    <fullName>Former Student</fullName>
                </value>
                <value>
                    <fullName>Hosted Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_resides_with__c</fullName>
        <label>Student resides with</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Both parents</fullName>
                    <default>true</default>
                    <label>Both parents</label>
                </value>
                <value>
                    <fullName>One Parent</fullName>
                </value>
                <value>
                    <fullName>Shared Residential</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Torres_Strait_Islander__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Torres Strait Islander</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Class_No__c</fullName>
        <label>Visa Class No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_year_did_he_she_arrive_in_Australia__c</fullName>
        <label>What year did he/she arrive in Australia</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_STREET</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Mass_email_view</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN_MEMBER.STATUS</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>Campaign Mass email view</label>
    </listViews>
    <listViews>
        <fullName>Child_Only_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Child</value>
        </filters>
        <label>Child Only Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Parent_Only_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Parent</value>
        </filters>
        <label>Parent Only Contacts</label>
    </listViews>
    <listViews>
        <fullName>Stakeholder_Only_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Stakeholder</value>
        </filters>
        <label>Stakeholder Only Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Child</fullName>
        <active>true</active>
        <description>This is a Child record type where the children records are stored</description>
        <label>Child</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent</fullName>
        <active>true</active>
        <description>This is a Parent record type where the parent records will be stored</description>
        <label>Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stakeholder</fullName>
        <active>true</active>
        <description>Stakeholder records will be stored in stakeholder record type</description>
        <label>Stakeholder</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Arrival_yr_and_Visa_Class_no_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(Overseas_Student__c = true ,  ISPICKVAL( Resident_of_Australia__c , &quot;Temporary&quot;),  ISPICKVAL( Resident_of_Australia__c, &quot;Permanent&quot;) ) , OR( ISBLANK(What_year_did_he_she_arrive_in_Australia__c ) ,ISBLANK(Visa_Class_No__c )) )</errorConditionFormula>
        <errorMessage>Either Overseas Student or Resident status is selected then it is mandatory to put &quot;Arrival Year in Australia&quot; &amp; &quot;Visa Class No&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Either_Australian_Citizen_or_Overseas_St</fullName>
        <active>true</active>
        <description>When saving a record you need to select either Australian Citizen	or Overseas Student to save the record.</description>
        <errorConditionFormula>IF( RecordTypeId ==&apos;01290000000WKhJ&apos;, OR( AND( Overseas_Student__c , Australian_Citizen__c ) , 
       AND(NOT(Overseas_Student__c) , NOT(Australian_Citizen__c)) ), false)</errorConditionFormula>
        <errorMessage>Select either Australian Citizen	or Overseas Student</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Alumni_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Alumni__c , ( ISBLANK( If_Alumni__c ) ) , false)</errorConditionFormula>
        <errorMessage>&quot;If Alumni&quot; is mandatory when Alumni is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Christian_put_Church_Affiliation</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISPICKVAL( Religion__c , &apos;Christian&apos;) ,  ISBLANK( Church_Affiliation__c )  ,  IF( NOT(ISPICKVAL( Religion__c , &apos;Christian&apos;)) ,NOT(ISBLANK( Church_Affiliation__c )) , false) )</errorConditionFormula>
        <errorDisplayField>Church_Affiliation__c</errorDisplayField>
        <errorMessage>Mandatory to put Church Affiliation once you have selected Religion as Christian</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Guardian_put_relationship</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISPICKVAL( Parent_Type__c , &apos;Guardian&apos;) ,  ISBLANK( Relationship_with_Student__c ), IF( NOT(ISPICKVAL( Parent_Type__c , &apos;Guardian&apos;)) ,NOT(ISBLANK( Relationship_with_Student__c )) , false) )</errorConditionFormula>
        <errorDisplayField>Relationship_with_Student__c</errorDisplayField>
        <errorMessage>If Guardian Parent Type is selected it is mandatory to put the relationship with student</errorMessage>
    </validationRules>
</CustomObject>